# cubiq

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
assets/: test_graph.json
src/: graph_view.cpp  graph_view.h  main.cpp  main_window.cpp  main_window.h
src/core/: bounding_box.h  equation_list.cpp  equation_list.h  graph.cpp  graph.h  graph_view.cpp  graph_view.h  main.cpp  main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h
src/equations/: equation.cpp  equation.h  function.cpp  function.h  implicit_equation.cpp  implicit_equation.h
src/parser/: context.cpp  context.h  defs.h  expression.cpp  expression.h  interpreter.cpp  interpreter.h  tokenizer.cpp  tokenizer.h
src/shader/: basic_fragment_glsl.h  basic_vertex_glsl.h
src/style/: dark_qss.h
